tests/scripts/type_errors/missing_accept_or_reject.roto
filter foo() {
    if 2 == 4 { reject }
}
